// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders outline variant 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 9999,
        "justifyContent": "center",
        "overflow": "hidden",
        "paddingHorizontal": 24,
        "paddingVertical": 12,
      },
      false,
      {
        "backgroundColor": "transparent",
        "borderColor": "#9f9f9f",
        "borderWidth": 1.5,
      },
      undefined,
      false,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
      }
    }
  >
    <Text
      style={
        [
          {
            "fontSize": 16,
            "fontWeight": "600",
          },
          false,
          {
            "color": "#000000",
          },
        ]
      }
    >
      Outline
    </Text>
  </View>
</View>
`;

exports[`Button renders primary variant 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 9999,
        "justifyContent": "center",
        "overflow": "hidden",
        "paddingHorizontal": 24,
        "paddingVertical": 12,
      },
      false,
      {
        "backgroundColor": "#628395",
      },
      undefined,
      false,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
      }
    }
  >
    <Text
      style={
        [
          {
            "fontSize": 16,
            "fontWeight": "600",
          },
          false,
          {
            "color": "#FFFFFF",
          },
        ]
      }
    >
      Primary
    </Text>
  </View>
</View>
`;

exports[`Button renders secondary variant 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 9999,
        "justifyContent": "center",
        "overflow": "hidden",
        "paddingHorizontal": 24,
        "paddingVertical": 12,
      },
      false,
      {
        "backgroundColor": "#000000",
      },
      undefined,
      false,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
      }
    }
  >
    <Text
      style={
        [
          {
            "fontSize": 16,
            "fontWeight": "600",
          },
          false,
          {
            "color": "#FFFFFF",
          },
        ]
      }
    >
      Secondary
    </Text>
  </View>
</View>
`;

exports[`Button renders small 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 9999,
        "justifyContent": "center",
        "overflow": "hidden",
        "paddingHorizontal": 24,
        "paddingVertical": 12,
      },
      {
        "paddingHorizontal": 16,
        "paddingVertical": 8,
      },
      {
        "backgroundColor": "#628395",
      },
      undefined,
      false,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
      }
    }
  >
    <Text
      style={
        [
          {
            "fontSize": 16,
            "fontWeight": "600",
          },
          {
            "fontSize": 14,
          },
          {
            "color": "#FFFFFF",
          },
        ]
      }
    >
      Small
    </Text>
  </View>
</View>
`;

exports[`Button renders with icon 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 9999,
        "justifyContent": "center",
        "overflow": "hidden",
        "paddingHorizontal": 24,
        "paddingVertical": 12,
      },
      false,
      {
        "backgroundColor": "#628395",
      },
      undefined,
      false,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 8,
      }
    }
  >
    <PlatformIcon
      androidIconName="add_comment"
      color="#FFFFFF"
      iosIconName="plus.bubble"
      size={20}
    />
    <Text
      style={
        [
          {
            "fontSize": 16,
            "fontWeight": "600",
          },
          false,
          {
            "color": "#FFFFFF",
          },
        ]
      }
    >
      With Icon
    </Text>
  </View>
</View>
`;
